look aligning fixes

--- a/IzvorniKod/Frontend/src/app/components/login/login.component.scss
+++ b/IzvorniKod/Frontend/src/app/components/login/login.component.scss
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     background: #fff;
-    min-height: 100vh;
+    min-height: 96vh;
 }
 
 form {
